@@ -6,8 +6,29 @@
   },
   {
     'all' => {
-      'bar' => {},
-      'sany' => {}
+      'bar' => {
+        '0' => {
+          'recipe' => [],
+          'recipe_raw' => []
+        }
+      },
+      'sany' => {
+        '0' => $VAR1->[1]{'all'}{'bar'}{'0'}
+      }
+    },
+    'sany' => {
+      'sany' => {
+        '0' => {
+          'recipe' => [
+            'cd subdir && $(MK)',
+            'say hi'
+          ],
+          'recipe_raw' => [
+            'cd subdir && $(MK)',
+            'say hi'
+          ]
+        }
+      }
     }
   }
 ]
