@@ -1,3 +1,5 @@
+- as_graph(no_rules) uses multiedged to store recipes in edges, redundancy function uses
+
 2.009 2020-11-23
 - parse returns self for chaining
 - find_recursive_makes method
